new fonts and color

--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <style media="screen">
+      h1 {color:green;}
+      h1 {font-family:empires}
+      p {color:red;}
+      p {font-family:steelfish}
+    </style>
     <title>My Webpage Assignment</title>
   </head>
   <body>
-<<p>Hello World</p>
-  <<p>This is my Github hosted website</p>
-  <<p>My favorite food is </p>
+<h1 style="font-size:90px"><b>Hello World</b></h1>
+  <p style="font-size:30px">&nbsp This is my <i>Github &nbsp</i> hosted website.</p>
+  <p style="font-size:30px">&nbsp My favorite place is <b>New York City</b>. </p>
   </body>
 </html>
