--- a/Session02/index.html
+++ b/Session02/index.html
@@ -8,7 +8,7 @@
         max-width: 800px;
       }
       body{
-        background-color: beige;
+        background-color: lightcyan;
       }
       h1{
         font-family: 'Staatliches', sans-serif;
