--- a/Session03/index.html
+++ b/Session03/index.html
@@ -2,31 +2,33 @@
 <html>
   <head>
     <title>Image Basics</title>
+      <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Staatliches&display=swap" rel="stylesheet">
     <style>
       .page{
-        max-width:900px;
-        display:inline-block;
+        max-width:1000px;
+        margin:auto;
+        background-color:#f3dfbc;
       }
-
+      .outer{
+        text-align:left;
+        padding:20px
+      }
       .spotart{
         width:300px;
         float:right;
-        padding:10px;
+        padding:20px;
       }
-
       .spotart1{
         width:300px;
         float:left;
-        padding-right:10px;
-        padding-bottom:10px;
-        padding-top:10px
+        padding:20px;
       }
-
     </style>
 
   </head>
   <body>
     <div class="page">
+    <div class="outer">
       <img src="img/new-york-city.jpg"
         width="100%"
         height="auto"
@@ -48,7 +50,7 @@
           <p>
 
 
-
+    </div>
     </div>
   </body>
 </html>
