--- a/poem/index.html
+++ b/poem/index.html
@@ -14,16 +14,6 @@
         text-align:center;
         padding:20px
       }
-      .spotart{
-        width:352px;
-        float:right;
-        padding:20px;
-      }
-      .spotart1{
-        width:352px;
-        float:left;
-        padding:20px;
-      }
       .headline{
         font-family: 'Damion', cursive;
         font-size:72px;
@@ -31,7 +21,7 @@
       }
       .author{
         font-family: 'Damion', cursive;
-        font-size:40px;
+        font-size:45px;
         color:#1c4a17;
       }
       p{
@@ -47,9 +37,7 @@
       <img src="img/daffodils-final.jpg"
         width="100%"
         height="auto"
-        border="0"
-        style="border-color: darkorange"
-        alt="New York City"
+        alt="Daffodil Field"
         />
       <span class="headline">I Wandered Lonely As a Cloud</span><br>
       <span class="author">By William Wordsworth</span>
