--- a/Session04/site-color-scheme.html
+++ b/Session04/site-color-scheme.html
@@ -4,10 +4,10 @@
 	<title>Color Scheme</title>
 
 	<style>
-
 	body{
 			font-family: sans-serif;
 			font-size: 18px;
+			background-color: #f2f2f2;
 	}
 
     .outer{
@@ -21,7 +21,17 @@
   		text-align:left;
 
   		padding:10px;
-  		border:solid 1px;
+
+  		background-color: #FFF;
+  	}
+
+  	.swatcharea{
+  		width:300px;
+  		position: relative;
+       display: inline-block;
+  		text-align:left;
+
+
   	}
   	.heading{
   		font-size: 24px;
@@ -62,6 +72,16 @@
   		background-color: #ad2118;
   	}
 
+		.hobbymenucolor1{
+			background-color: #ad2118;
+		}
+		.hobbymenucolor2{
+			background-color: #441500;
+		}
+		.hobbymenucolor3{
+			background-color: #white;
+		}
+
   	.pagecolor1{
   		background-color: #white;
   	}
@@ -71,6 +91,16 @@
   	.pagecolor3{
   		background-color: #a76721;
   	}
+
+		.hobbypagecolor1{
+			background-color: #white;
+		}
+		.hobbypagecolor2{
+			background-color: #ad2118;
+		}
+		.hobbypagecolor3{
+			background-color: #441500;
+		}
 
   	.textcolor1{
   		background-color: #441500;
@@ -82,6 +112,27 @@
   		background-color: #222233;
   	}
 
+		.hobbytextcolor1{
+			background-color: #a76721;
+		}
+		.hobbytextcolor2{
+			background-color: #441500;
+		}
+		.hobbytextcolor3{
+			background-color: #222233;
+		}
+
+		.img{
+  		padding:10px;
+  		width:95%;
+  		margin-top:30px;
+
+  	}
+  	.img_mobile{
+  		padding:10px;
+  		width:55%;
+  	}
+
 
 
 
@@ -91,28 +142,71 @@
 
 	<div class="outer">
 		<div class="page">
+	<!-- THIS IS WHERE THE ORIGINAL INFORMATION BEGINS -->
 			<div class="heading"><span class="font-family">Chipotle Mexican Grill</span></div>
 			<div class="heading">Font-Family: <span class="font-family">Trade Gothic LT Bold, Helvetica Neue, Nunito</span></div>
            	<div class="heading">Brand Colors:</div>
            	<div class="swatch brandcolor1"></div>
-						<div class="swatch brandcolor2"></div>
+						<div class="swatch brandcolor2"></div><br>
 
-           	<div class="heading">Menu:</div>
+          <div class="swatcharea">
+            <!-- THIS IS WHERE THE ORIGINAL BRAND MENU COLORS ARE DEFINED -->
+           	<div class="heading">Brand Menu:</div>
            	<div class="swatch menucolor1"></div>
            	<div class="swatch menucolor2"></div>
            	<div class="swatch menucolor3"></div>
 
-           	<div class="heading">Page:</div>
+            <!-- THIS IS WHERE THE ORIGINAL BRAND PAGE COLORS ARE DEFINED -->
+           	<div class="heading">Brand Page:</div>
            	<div class="swatch pagecolor1"></div>
            	<div class="swatch pagecolor2"></div>
            	<div class="swatch pagecolor3"></div>
 
-           	<div class="heading">Text:</div>
+            <!-- THIS IS WHERE THE ORIGINAL BRAND TEXT COLORS ARE DEFINED -->
+           	<div class="heading">Brand Text:</div>
            	<div class="swatch textcolor1"></div>
            	<div class="swatch textcolor2"></div>
+           	<div class="swatch textcolor3"></div>
+         </div>
+
+
+          <div class="swatcharea">
+ <!-- THIS IS WHERE THE HOBBY COLORS ARE DEFINED -->
+
+           <div class="heading">Hobby Menu:</div>
+           	<div class="swatch hobbymenucolor1"></div>
+           	<div class="swatch hobbymenucolor2"></div>
+           	<div class="swatch hobbymenucolor3"></div>
+
+           <!-- THIS IS WHERE THE HOBBY PAGE COLORS ARE DEFINED -->
+
+           	<div class="heading">Hobby Page:</div>
+           	<div class="swatch hobbypagecolor1"></div>
+           	<div class="swatch hobbypagecolor2"></div>
+           	<div class="swatch hobbypagecolor3"></div>
+
+           	<!-- THIS IS WHERE THE HOBBY TEXT COLORS ARE DEFINED -->
+
+           	<div class="heading">Hobby Text:</div>
+           	<div class="swatch hobbytextcolor1"></div>
+           	<div class="swatch hobbytextcolor2"></div>
+
+
+          </div>
+
+
+
+           	<div><img class="img" src="img/chipotle-desktop.jpg" alt="desktop wireframe sketch"></div>
+           	<div><img class="img_mobile" src="img/chipotle-mobile.jpg" alt="desktop wireframe sketch"></div>
+
+<!-- THIS IS WHERE YOUR HOBBY INFORMATION BEGINS -->
+
+
 
 
 		</div>
+
+
 
 	</div>
 
