--- a/Chipotle-navigation/home.html
+++ b/Chipotle-navigation/home.html
@@ -13,7 +13,8 @@
 <div class="outer">
 <div class="page">
 <div class="topofpage">
-  <div class="logo"><img src="img/chipotle-logo.png" alt="Chipotle logo" class="logoimg" /></div>
+  <div class="logo">
+      <img src="img/chipotle-logo.png" alt="Chipotle logo" class="logoimg" /></div>
   <div class="navbar">
       <a href="home.html"class="navhere">Home</a>
       <a href="about.html">About</a>
