--- a/Tiles/index.html
+++ b/Tiles/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>basic template</title>
+	<title>Athlete's at Chipotle</title>
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
