--- a/Chipotle-navigation/about.html
+++ b/Chipotle-navigation/about.html
@@ -1,23 +1,25 @@
 <!doctype html>
 <html>
 <head>
-  <title>Chipotle: Home</title>
+  <title>Chipotle: About</title>
   <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
 
+<script src="menu.js" type="text/javascript"></script>
 
-</style>
 </head>
 <body>
+<div class="body">
 <div class="outer">
 <div class="page">
 <div class="topofpage">
-  <div class="logo"><img src="img/chipotle-logo.png" alt="Chipotle logo" class="logoimg" />
+  <div class="logo">
+    <a href="home.html"class="navhere">
+    <img src="img/chipotle-logo.png" alt="Chipotle logo" class="logoimg"/>
+  </a>
   </div>
-
   <div class="navbar">
-      <a href="home.html" >Home</a>
       <a href="about.html"class="navhere">About</a>
       <a href="contact.html" >Contact</a>
     </div>
@@ -33,6 +35,7 @@
   </div>
 
 
+</div>
 </div>
 </div>
 
