--- a/Chipotle-navigation/home.html
+++ b/Chipotle-navigation/home.html
@@ -17,7 +17,7 @@
     <div class="topofpage">
       <div class="logo">
         <a href="home.html"class="navhere">
-          <img src="img/chipotle-logo.png" alt="Chipotle logo" class="logoimg"/>
+          <img src="img/Chipotle-logo.png" alt="Chipotle logo" class="logoimg"/>
         </a>
       </div>
 
