--- a/component-animation/index.html
+++ b/component-animation/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Chipotle Component Grid</title>
+  <title>Chipotle Component Animation</title>
   <meta name="description" content="Basic Grid">
   <meta name="keywords" content="html, css,floats, float left, float right, clearfix, simple grid">
   <meta name="author" content="Intro to Web">
