--- a/secondary/newpage.html
+++ b/secondary/newpage.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Chipotle Component Animation</title>
+  <title>Athletes</title>
   <meta name="description" content="Basic Grid">
   <meta name="keywords" content="html, css,floats, float left, float right, clearfix, simple grid">
   <meta name="author" content="Intro to Web">
@@ -24,7 +24,6 @@
       <a href="newpage.html">Athletes</a>
 </div>
     <div class="page">
-    <div class="container">
 
 
 
@@ -46,23 +45,25 @@
                 </div>
                 <!--SIDE BAR END -->
                 <!--SIDE BAR -->
-                <div class="side_bar">
-                    <img src="img/lebron.jpg" />
-                    <span class="section">LeBron James</span><br>
-                    Click here to explore LeBron's favorite meals.
 
-                </div>
-                <!--SIDE BAR END -->
-                <!--SIDE BAR -->
                 <div class="side_bar">
                     <img src="img/lillard.jpg" />
                     <span class="section">Damian Lillard</span><br>
                     Find out what Dame Time likes at Dinner Time.
 
                 </div>
+
+                <div class="side_bar">
+                    <img src="img/anthony.jpg" />
+                    <span class="section">Anthony Davis</span><br>
+                    Click here to explore Anthony's favorites.
+
+                </div>
+                <!--SIDE BAR END -->
+                <!--SIDE BAR -->
                 <!--SIDE BAR END -->
             </div>
-        </div>
+
 
   <!-- another row -->
         <div class="row">
